# dirutils

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README.md  configure.ac
.github/workflows/: build.yml  c-cpp.yml  codeql.yml
src/: Makefile.am  dirmap.c  dirmap.h  dirscan.c  dirstats.c  dirwatch.c  utils.c  utils.h
